--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Node
+node_modules/
+
 # Temporary files
 tmp/
 temp/
+
+# Local data
+data/
