--- a/ws-gateway/package.json
+++ b/ws-gateway/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx src/index.ts",
+    "smoke": "tsx scripts/realtime_smoke_test.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
