Document stream callback env vars

--- a/voip-client/.env.example
+++ b/voip-client/.env.example
@@ -5,3 +5,5 @@ APP_SID=APxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 CLIENT_ID=browser
 PORT=3001
 STREAM_URL=wss://your-ngrok.example.com/stream
+STREAM_STATUS_URL=https://your-ngrok.example.com/twilio/stream-status
+STREAM_MODE=connect
