--- a/voip-client/.env.example
+++ b/voip-client/.env.example
@@ -7,3 +7,4 @@ PORT=3001
 STREAM_URL=wss://your-ngrok.example.com/stream
 STREAM_STATUS_URL=https://your-ngrok.example.com/twilio/stream-status
 STREAM_MODE=connect
+TWIML_VARIANT=keepalive
