--- a/ws-gateway/package.json
+++ b/ws-gateway/package.json
@@ -7,6 +7,10 @@
     "dev": "tsx src/index.ts",
     "smoke": "tsx scripts/realtime_smoke_test.ts",
     "rice-test": "tsx scripts/rice_flow_test.ts",
+    "audio-test": "tsx scripts/audio_format_test.ts",
+    "test": "npm run rice-test && npm run audio-test",
+    "typecheck": "tsc -p tsconfig.json",
+    "verify": "npm run typecheck && npm run test",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
