--- a/ws-gateway/package.json
+++ b/ws-gateway/package.json
@@ -7,6 +7,8 @@
     "dev": "tsx src/index.ts",
     "smoke": "tsx scripts/realtime_smoke_test.ts",
     "rice-test": "tsx scripts/rice_flow_test.ts",
+    "conv:last": "bash scripts/extract_last_call_conv.sh",
+    "conv:all": "bash scripts/extract_last_call_conv.sh --all",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
